tests/ui/mismatched_types/issue-35030.stderr
error[E0308]: mismatched types
  --> $DIR/issue-35030.rs:9:14
   |
LL | impl<bool> Parser<bool> for bool {
   |      ---- expected this type parameter
LL |     fn parse(text: &str) -> Option<bool> {
LL |         Some(true)
   |         ---- ^^^^ expected type parameter `bool`, found `bool`
   |         |
   |         arguments to this enum variant are incorrect
   |
   = note: expected type parameter `bool` (type parameter `bool`)
                        found type `bool` (`bool`)
help: the type constructed contains `bool` due to the type of the argument passed
  --> $DIR/issue-35030.rs:9:9
   |
LL |         Some(true)
   |         ^^^^^----^
   |              |
   |              this argument influences the type of `Some`
note: tuple variant defined here
  --> $SRC_DIR/core/src/option.rs:LL:COL

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
